<resources>
    <string name="app_name">PAM1-ATIVIDADE-LAYOUT</string>
    <string name="gasto">Tipo de Gasto:</string>
    <string name="valor">Valor:</string>
    <string name="data">Data:</string>
    <string name="descricao">Descrição:</string>
    <string name="local">Local:</string>
    <string name="salvar">SALVAR</string>
    <string name="selecione">Selecione:</string>
    <string name="dcvalor">valor</string>
    <string name="dcdescricao">descrição</string>
    <string name="dclocal">local</string>
    <string name="dt1">Data 1</string>
    <string name="dt2">Data 2</string>
    <string name="b1">B1</string>
    <string name="b2">B2</string>
</resources>
