<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTGasto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/gasto"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtValot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/valor"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <EditText
        android:id="@+id/edtValor"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/dcvalor"
        app:layout_constraintEnd_toStartOf="@+id/btnSelecione"
        app:layout_constraintStart_toStartOf="@+id/txtValot"
        app:layout_constraintTop_toBottomOf="@+id/txtValot" />

    <TextView
        android:id="@+id/txtData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/data"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/edtValor"
        app:layout_constraintTop_toTopOf="@+id/txtValot" />

    <TextView
        android:id="@+id/txtDescricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/descricao"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/edtValor"
        app:layout_constraintTop_toBottomOf="@+id/edtValor" />

    <EditText
        android:id="@+id/edtDescricao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/dcdescricao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtDescricao"
        app:layout_constraintTop_toBottomOf="@+id/txtDescricao" />

    <TextView
        android:id="@+id/txtLocal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/local"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/edtDescricao"
        app:layout_constraintTop_toBottomOf="@+id/edtDescricao" />

    <EditText
        android:id="@+id/edtLocal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/dclocal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtLocal"
        app:layout_constraintTop_toBottomOf="@+id/txtLocal" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/salvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtLocal" />

    <Button
        android:id="@+id/btnSelecione"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/selecione"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtData" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtTGasto"
        app:layout_constraintTop_toBottomOf="@+id/txtTGasto" />

</androidx.constraintlayout.widget.ConstraintLayout>