<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Exemplo2Activity">

    <TextView
        android:id="@+id/txtData2"
        android:layout_width="41dp"
        android:layout_height="wrap_content"
        android:text="@string/dt2"
        android:textColor="#F44336"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/txtData1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtData1"
        app:layout_constraintTop_toTopOf="@+id/txtData1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtData1"
        android:layout_width="41dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/dt1"
        android:textColor="#F44336"
        android:textColorHighlight="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/txtData2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/b1"
        android:textColor="#3F51B5"
        app:layout_constraintEnd_toEndOf="@+id/txtData1"
        app:layout_constraintStart_toStartOf="@+id/txtData1"
        app:layout_constraintTop_toBottomOf="@+id/txtData1" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/b2"
        android:textColor="#3F51B5"
        app:layout_constraintEnd_toEndOf="@+id/txtData2"
        app:layout_constraintStart_toStartOf="@+id/txtData2"
        app:layout_constraintTop_toBottomOf="@+id/txtData2" />
</androidx.constraintlayout.widget.ConstraintLayout>